--- a/sass/components/_heroBackdrop.scss
+++ b/sass/components/_heroBackdrop.scss
@@ -108,11 +108,7 @@
 .faq2 {
   position: absolute;
   width: 65%;
-  top: -1vh;
+  top: 1vh;
   left: -12%;
   z-index: 9;
-
-  @media (min-width: 600px) {
-    bottom: 2vh;
-  }
 }
